# eq_infinity

./: .clang-format  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-macos.yml  build-windows.yml
scripts/: build.sh  configure.sh  format.sh  setup_macos.sh  setup_windows.ps1
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dsp/: EqBand.cpp  EqBand.h  EqEngine.cpp  EqEngine.h  ResponseCurve.cpp  ResponseCurve.h
src/ui/: EqPlotComponent.cpp  EqPlotComponent.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h
src/util/: Params.cpp  Params.h
tests/: Milestone23Tests.cpp
